Fix menu overflow safari issue

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,5 +1,6 @@
 .footer-container {
   border-top: #000000 solid 1px;
+  padding-top: 10px;
 }
 
 a {
